# llm_postor

./: .gitignore  .pre-commit-config.yaml  CONVENTIONS.md  LICENSE  README.md  game_state.json  game_state_discussion.json  game_state_end_4omini.json  game_state_end_imp_only_action.json  gui_development_plan.md  history.md  new_gui_development_plan.md  paper_scratchpad.md  pyproject.toml  raw_development_history.md  tournament_analysis.csv  whole_game_test__new_1.txt
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
among_them/: consts.py  utils.py
among_them/game/: action.py  engine.py  scene.py  tasks.py
among_them/llm/: config.py  costs.py
configs/: costs.toml  scene.json
data/: analysis.json  analysis_crewmate.json  analysis_impostor.json  analysis_mini.json  annotation_comparison_by_technique.csv  annotation_comparison_detailed.csv  annotation_comparison_detailed_results.json  annotation_comparison_overall.csv  annotation_comparison_results.csv  annotation_comparison_results.json  combined_annotations.csv  crewmate_techniques_usage.csv  error_log.txt  game_state_0.json  game_state_end_1_1_crewmates.json  impostor_techniques_usage.csv  other_llms_discussion.json  other_llms_end.json  other_llms_kill.json  other_llms_voting.json  persuasion_techniques_usage.csv  persuasion_wins_analysis.csv  technique_examples.json  token_usage.csv  tournament_analysis.json
data/annotations/: claude-3-5-haiku_vs_claude-3-5-haiku_3.json  claude-3-5-haiku_vs_claude-3-5-haiku_3.txt  claude-3-5-haiku_vs_claude-3-5-haiku_5.json  claude-3-5-haiku_vs_claude-3-5-haiku_5.txt  claude-3-5-haiku_vs_claude-3-5-haiku_7.json  claude-3-5-haiku_vs_claude-3-5-haiku_8.json  claude-3-5-haiku_vs_claude-3-5-haiku_9.json  claude-3-5-haiku_vs_claude-3-5-sonnet_1.txt  claude-3-5-haiku_vs_claude-3-5-sonnet_10.json  claude-3-5-haiku_vs_claude-3-5-sonnet_2.json  claude-3-5-haiku_vs_claude-3-5-sonnet_2.txt  claude-3-5-haiku_vs_claude-3-5-sonnet_3.json  claude-3-5-haiku_vs_claude-3-5-sonnet_3.txt  claude-3-5-haiku_vs_claude-3-5-sonnet_4.json  claude-3-5-haiku_vs_claude-3-5-sonnet_4.txt  claude-3-5-haiku_vs_claude-3-5-sonnet_5.json  claude-3-5-haiku_vs_claude-3-5-sonnet_5.txt  claude-3-5-haiku_vs_claude-3-5-sonnet_6.json  claude-3-5-haiku_vs_claude-3-5-sonnet_7.json  claude-3-5-haiku_vs_claude-3-5-sonnet_9.json  claude-3-5-haiku_vs_gemini-flash-1-5_10.json  claude-3-5-haiku_vs_gemini-flash-1-5_2.json  claude-3-5-haiku_vs_gemini-flash-1-5_2.txt  claude-3-5-haiku_vs_gemini-flash-1-5_3.json  claude-3-5-haiku_vs_gemini-flash-1-5_3.txt  claude-3-5-haiku_vs_gemini-flash-1-5_4.txt  claude-3-5-haiku_vs_gemini-flash-1-5_7.json  claude-3-5-haiku_vs_gemini-flash-1-5_9.json  claude-3-5-haiku_vs_gemini-pro-1-5_1.json  claude-3-5-haiku_vs_gemini-pro-1-5_1.txt  claude-3-5-haiku_vs_gemini-pro-1-5_10.json  claude-3-5-haiku_vs_gemini-pro-1-5_2.json  claude-3-5-haiku_vs_gemini-pro-1-5_2.txt  claude-3-5-haiku_vs_gemini-pro-1-5_3.json  claude-3-5-haiku_vs_gemini-pro-1-5_3.txt  claude-3-5-haiku_vs_gemini-pro-1-5_4.json  claude-3-5-haiku_vs_gemini-pro-1-5_4.txt  claude-3-5-haiku_vs_gemini-pro-1-5_5.json  claude-3-5-haiku_vs_gemini-pro-1-5_5.txt  claude-3-5-haiku_vs_gemini-pro-1-5_7.json  (+717 more)
data/annotations_4o_mini/: claude-3-5-haiku_vs_claude-3-5-haiku_3.json  claude-3-5-haiku_vs_claude-3-5-haiku_5.json  claude-3-5-haiku_vs_claude-3-5-sonnet_2.json  claude-3-5-haiku_vs_claude-3-5-sonnet_3.json  (+252 more)
scratchpad/: game_engine_refractoring_plan.md  gui_development_plan.md  response.py
scripts/: main.py  run_gui.py  run_gui.sh  tournament.py
src/: annotation.py  demo.py  demo_gui.py  discussion_points_Waciej_2024-10-09_09-54-36.txt  discussion_points_Waciej_2024-10-09_09-57-13.txt  discussion_points_Waciej_2024-10-09_09-58-37.txt  discussion_points_Warek_2024-10-09_09-56-16.txt  discussion_points_Warek_2024-10-09_09-58-51.txt  discussion_points_Warek_2024-10-09_09-59-52.txt  discussion_points_Wikolaj_2024-10-09_09-54-55.txt  discussion_points_Wikolaj_2024-10-09_09-59-59.txt  llm_prompts.py  test_ai_action_phase_crewmate.py  test_ai_whole_game.py
test/: conftest.py  test_game_engine.py  test_player.py
tests/: conftest.py
(+1279 files in other folders)
